Fixing methods update and delete in Integration test